change swagger schema
